# scribai

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  live-integration.yml  publish.yml
docs/: benchmark_repository_boundary.md  benchmark_schema.md  quality_evaluation_framework.md
profiles/: pipeline.profile.example.yaml
profiles/hybrid/: pipeline.profile.hybrid_local_spawned_ocr_remote_text.example.yaml
profiles/local_attached/: pipeline.profile.local_attached_litellm.example.yaml  pipeline.profile.local_attached_litellm_qwen35_35b_a3b_mxfp4.example.yaml  pipeline.profile.local_attached_litellm_qwen35_4b_bf16.example.yaml  pipeline.profile.local_attached_litellm_qwen35_9b_bf16.example.yaml
profiles/local_spawned/: pipeline.profile.local_spawned_litellm.example.yaml  pipeline.profile.local_spawned_litellm_qwen35_35b_a3b_mxfp4.example.yaml  pipeline.profile.local_spawned_llama_cpp_litellm.example.yaml  pipeline.profile.local_spawned_llama_cpp_litellm_highcap.example.yaml  pipeline.profile.local_spawned_llama_cpp_qwen35_0p8b_bf16.example.yaml  pipeline.profile.local_spawned_llama_cpp_qwen35_2b_bf16.example.yaml  pipeline.profile.local_spawned_llama_cpp_qwen35_4b_bf16.example.yaml  pipeline.profile.local_spawned_llama_cpp_qwen35_4b_bf16_fast.example.yaml  pipeline.profile.local_spawned_llama_cpp_qwen35_9b_bf16.example.yaml  pipeline.profile.local_spawned_llama_cpp_qwen35_9b_bf16_fast.example.yaml
profiles/remote/: pipeline.profile.remote_cerebras_gpt_oss_120b.example.yaml  pipeline.profile.remote_cerebras_llama31_8b.example.yaml  pipeline.profile.remote_cerebras_qwen3_235b_a22b_instruct_2507.example.yaml  pipeline.profile.remote_cerebras_zai_glm_4_7.example.yaml  pipeline.profile.remote_openrouter.example.yaml  pipeline.profile.remote_openrouter_claude_sonnet_4_5.example.yaml  pipeline.profile.remote_openrouter_gemini_2_5_flash.example.yaml  pipeline.profile.remote_openrouter_gpt4o_mini.example.yaml  pipeline.profile.remote_openrouter_llama31_8b.example.yaml  pipeline.profile.remote_openrouter_mistral_nemo.example.yaml  pipeline.profile.remote_openrouter_qwen25_7b.example.yaml  pipeline.profile.remote_openrouter_qwen35_flash.example.yaml  pipeline.profile.remote_openrouter_qwen3_coder_next.example.yaml  pipeline.profile.remote_openrouter_qwen3_next_80b_a3b.example.yaml
samples/: README.md
scripts/: render_hosted_pareto.py  render_matrix_report.py  run_matrix.sh
src/scriba/: cli.py
src/scriba/pipeline/: runner.py  state.py
tests/: test_cli.py  test_integration_benchmark_flow.py  test_render_matrix_report.py  test_runner.py
