[project]
name = "scriba"
version = "0.1.0"
description = "CLI-first document normalization pipeline for PDFs and OCR-able files"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ocr", "pdf", "markdown", "cli", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
urls = { Homepage = "https://github.com/codyw912/scriba", Repository = "https://github.com/codyw912/scriba", Issues = "https://github.com/codyw912/scriba/issues" }
dependencies = [
    "httpx>=0.27.0",
    "litellm>=1.75.0",
    "pymupdf4llm>=0.3.4",
    "PyYAML>=6.0.0",
    "tqdm>=4.67.3",
]

[project.scripts]
scriba = "scriba.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scriba"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pymupdf>=1.27.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "tiktoken>=0.12.0",
]
